	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fixed sparse flag manipulation on windows
	* fixed streaming piece picking issue

0.16.8 release

	* make rename_file create missing directories for new filename
	* added missing python function: parse_magnet_uri
	* fix alerts.all_categories in python binding
	* fix torrent-abort issue which would cancel name lookups of other torrents
	* make torrent file parser reject invalid path elements earlier
	* fixed piece picker bug when using pad-files
	* fix read-piece response for cancelled deadline-pieces
	* fixed file priority vector-overrun
	* fix potential packet allocation alignment issue in utp
	* make 'close_redudnant_connections' cover more cases
	* set_piece_deadline() also unfilters the piece (if its priority is 0)
	* add work-around for bug in windows vista and earlier in GetOverlappedResult
	* fix traversal algorithm leak in DHT
	* fix string encoding conversions on windows