@@ -1972,8 +1972,8 @@ namespace libtorrent
 				// since we've already picked those
 				while (!can_pick(piece, pieces)
 					|| std::find(suggested_pieces.begin()
-					, suggested_pieces.end(), piece)
-					!= suggested_pieces.end())
+						, suggested_pieces.end(), piece)
+						!= suggested_pieces.end())
 				{
 					++loop_counter;
 					++piece;
@@ -2171,7 +2171,7 @@ namespace libtorrent
 	int piece_picker::blocks_in_piece(int index) const
 	{
 		TORRENT_ASSERT(index >= 0);
-		TORRENT_ASSERT(index < (int)m_piece_map.size());
+		TORRENT_ASSERT(index < (int)m_piece_map.size() || m_piece_map.empty());
 		if (index+1 == (int)m_piece_map.size())
 			return m_blocks_in_last_piece;
 		else
